Minor fix to tranform in "Jump to present" button

--- a/material-light/source.css
+++ b/material-light/source.css
@@ -345,7 +345,7 @@ div[id ^= "01"]:hover {
     width: 40px;
 }
 
-.JumpToBottom__Bar-sc-v9kqir-0 .StyledIconBase-ea9ulj-0 > path {
+.JumpToBottom__Bar-sc-v9kqir-0.gILwrq .StyledIconBase-ea9ulj-0 > path {
     transform: translate(0.25px, 1px);
 }
 
